# noobular-alpha

./: .gitignore  .pre-commit-config.yaml  README.md  create.py  create_course_prompt.txt  main.py  pyproject.toml  tasks.py  test.py  validate.py  visualize_course.py
courses/: battery.yaml  chemistry-basics.yaml  electric-eels-v2.yaml  electric-eels.yaml  game-theory.yaml  how-steel-is-made.yaml  plastic.yaml  python-basics.yaml  sample.yaml  sewage.yaml  solid-state-drives.yaml  solid-state.yaml  sugar-thinking.yaml  test-course.yaml  test-science-basics.yaml  web-development.yaml
noobular/: create.py  main.py  tasks.py  validate.py  visualize.py
physics_textbook/: outline.txt  outline.yaml
prompt/: create.txt  katex.md
static/: global.css
templates/: answer_feedback.html  banner.html  base.html  course.html  create.html  error.html  header.html  index.html  knowledge_point.html  lesson.html  lesson_macros.html  login.html  next_button.html  question_form.html  question_next_button.html  question_page.html  quiz.html  review.html  review_next_button.html  review_question.html
