[project]
name = "noobular"
version = "0.0.0"
description = "A tool to learn stuff effectively"
authors = [
  { name = "Alec Chen" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "flask>=3.1.0",
  "pyyaml>=6.0.0",
  "graphviz>=0.21",
  "markdown>=3.10"
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
  "pre-commit",
  "types-pyyaml",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.mypy]
files = ["main.py", "visualize_course.py"]   # folders or files to always check
python_version = "3.9"
strict = true
