[project]
name = "noobular"
version = "0.0.0"
description = "A tool to learn stuff effectively"
authors = [
  { name = "Alec Chen" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "flask>=3.1.0",
  "pyyaml>=6.0.0",
  "graphviz>=0.21",
  "markdown>=3.10",
  "huey>=2.5.4"
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
  "pre-commit",
  "types-pyyaml",
  "types-Markdown",
  "xai-sdk",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "validate", "visualize_course", "create", "tasks"]

[tool.mypy]
files = ["main.py", "visualize_course.py", "validate.py", "create.py", "tasks.py"]   # folders or files to always check
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "huey.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tasks"
disallow_untyped_decorators = false
