[project]
name = "noobular"
version = "0.0.0"
description = "A tool to learn stuff effectively"
authors = [
  { name = "Alec Chen" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "flask>=3.1.0",
  "pyyaml>=6.0.0",
  "graphviz>=0.21",
  "markdown>=3.10",
  "huey>=2.5.4",
  "xai-sdk>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
  "pre-commit",
  "types-pyyaml",
  "types-Markdown",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["noobular"]

[tool.mypy]
files = ["noobular"]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "huey.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "noobular.tasks"
disallow_untyped_decorators = false
